preseed-lib/iptables-ssh-only
#!/bin/sh
set -o errexit -o nounset

mkdir -m 755 -p /target/etc/iptables

cat > /target/tmp/rules.v4 <<EOF
*filter

-P INPUT DROP
-P FORWARD ACCEPT
-P OUTPUT ACCEPT

-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -s 127.0.0.0/8 -j DROP
-A INPUT ! -i lo -d 127.0.0.0/8 -j DROP

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT 
-A INPUT -p tcp --dport 22 -m state --state NEW -j ACCEPT

-A INPUT -j REJECT

COMMIT
EOF

in-target install -o root -g root -m 644 /tmp/rules.v4 /etc/iptables/rules.v4

cat > /target/tmp/rules.v6 <<EOF
*filter

-P INPUT DROP
-P FORWARD ACCEPT
-P OUTPUT ACCEPT

-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -s ::1 -j DROP
-A INPUT ! -i lo -d ::1 -j DROP

-A INPUT -p icmpv6 --icmpv6-type echo-request -j ACCEPT 
-A INPUT -p icmpv6 --icmpv6-type echo-reply -j ACCEPT 
-A INPUT -p icmpv6 --icmpv6-type destination-unreachable -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type packet-too-big -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type time-exceeded -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type parameter-problem -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type neighbor-solicitation -m hl --hl-eq 255 -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type neighbor-advertisement -m hl --hl-eq 255 -j ACCEPT
-A INPUT -p icmpv6 -j DROP

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp --dport 22 -m state --state NEW -j ACCEPT

-A INPUT -j REJECT

COMMIT
EOF

in-target install -o root -g root -m 644 /tmp/rules.v6 /etc/iptables/rules.v6
